--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 MAJOR:
-* Only visible part of map should be rendered
+* Right now map.Draw draws whole map, that is unnecessary, only visible part of map(i.e. in passed Pixel matrix) should be rendered
 MINOR:
-* Example with camera
+* Example of map with movable camera
+* map.tileBounds function looks awful, should be rewritten to be shorter/more understable
